--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -49,7 +49,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-left: 2rem; /* Add margin to separate from menu items */
+  margin-left: 2rem; 
 }
 
 .navbar-toggle {
